--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -15,6 +15,10 @@
     height: 100vh;
     background-color: aquamarine;
 }
+.page4{
+    height: 100vh;
+    background-color: rgb(43, 70, 61);
+}
 
 .page1 video {
     width: 100%;
