--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -22,18 +22,18 @@
 
 .page1 video {
     width: 100%;
+    height: 100%;
     object-fit: cover;
-    max-height: 100%;
+    object-position: left;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
 }
-.text {
-    width: 100%;
-    height: 100%;
-    font-size: 1.2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+/* Responsive for mobile devices below 440px  */
+@media(width<440px){
+    .page1{
+        height: 50vh;
+    }
 }
