--- a/src/css/member-card.css
+++ b/src/css/member-card.css
@@ -141,7 +141,35 @@ h3 {
 
   @media(width<440px){
     .card{
-      font-size: 2.7vh;
+      font-size: 2vh;
+      width: 43vw;
+      padding: 0.8rem 0.5rem;
+    }
+    .card-image{
+      height: 10rem;
+    }
+    .skills{
+      margin-top: 0.6rem;
+    }
+    .skills ul{
+      gap: 0.3rem;
+      li{
+        padding: 0.2rem 0.5rem;
+      }
+    }
+    .follow{
+      gap: 0.6rem;
+    }
+    .links{
+      gap: 1.2rem;
+    }
+    .gmail,
+    .linkedin{
+      height: 2.5rem;
+      width: 2.5rem;
+      svg{
+        height: 1.2rem;
+      }
     }
   }
   
