--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,8 @@
 .navbar {
-    width: 100%;
+    width: 100vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
+    /* justify-content: space-between; */
     align-items: center;
     padding: 3.5rem 3.5rem;
     position: fixed;
@@ -10,7 +11,7 @@
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     color: white;
     font-size: 2vw;
-    z-index: 5;
+    z-index: 2;
 }
 
 .name {
@@ -20,8 +21,8 @@
 .logo {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 5%;
+    transform: translate(0, -50%);
 }
 
 .logo img {
