--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -1,134 +1,167 @@
 .section1 {
-    height: 100vh;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background: linear-gradient(#434141,rgb(154, 151, 151));
-    color: white;
-    z-index: -1;
-    font-size: 2vw;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(#434141, rgb(154, 151, 151));
+  color: white;
+  z-index: -1;
+  font-size: 2vw;
 }
 
 .section2 {
-    height: 100vh;
-    background: url("/images/section2.png") no-repeat;
-    background-size: cover; 
-    background-position: center;
+  height: 100vh;
+  background: url("/images/section2.png") no-repeat;
+  background-size: cover;
+  background-position: center;
 }
-.section3{
-    height: 100vh;
-    background: url("/images/section3.png") no-repeat;
-    background-size: cover; 
-    background-position: center;
+
+.section3 {
+  height: 100vh;
+  background: url("/images/section3.png") no-repeat;
+  background-size: cover;
+  background-position: center;
 }
-.section4{
-    height: 100vh;
-    background: url("/images/section4.png") no-repeat;
-    background-size: cover; 
-    background-position: center;
+
+.section4 {
+  height: 100vh;
+  background: url("/images/section4.png") no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .section1 video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: left;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /* loader css  */
 .loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 45px;
-    aspect-ratio: .75;
-    --c: no-repeat linear-gradient(#434141 0 0);
-    background: 
-      var(--c) 0%   50%,
-      var(--c) 50%  50%,
-      var(--c) 100% 50%;
-    animation: l7 1s infinite linear alternate;
-  }
-  @keyframes l7 {
-    0%  {background-size: 20% 50% ,20% 50% ,20% 50% }
-    20% {background-size: 20% 20% ,20% 50% ,20% 50% }
-    40% {background-size: 20% 100%,20% 20% ,20% 50% }
-    60% {background-size: 20% 50% ,20% 100%,20% 20% }
-    80% {background-size: 20% 50% ,20% 50% ,20% 100%}
-    100%{background-size: 20% 50% ,20% 50% ,20% 50% }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 45px;
+  aspect-ratio: .75;
+  --c: no-repeat linear-gradient(#434141 0 0);
+  background:
+    var(--c) 0% 50%,
+    var(--c) 50% 50%,
+    var(--c) 100% 50%;
+  animation: l7 1s infinite linear alternate;
+}
+
+@keyframes l7 {
+  0% {
+    background-size: 20% 50%, 20% 50%, 20% 50%
   }
 
-  /* design for text inside sections */
-  .section{
-    position: relative;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-    padding: 0 2.5rem;
-    font-size: 2vw;
-    overflow: hidden;
+  20% {
+    background-size: 20% 20%, 20% 50%, 20% 50%
   }
-  .section h1 {
-    font-size: 3em; /* Responsive heading */
-    margin-bottom: 1.2rem;
-    font-family: "Viga";
-    overflow: hidden;
+
+  40% {
+    background-size: 20% 100%, 20% 20%, 20% 50%
   }
-  .section h1 span {
-    display: inline-block;
-} 
-  .section p {
-    font-size: 0.6em;
-    max-width: 31.3rem; /* Limit width for better readability */
-    padding: 0.5rem 0.2rem;
-    line-height: 1.5;
-    font-family: "Roboto";
-    backdrop-filter: blur(5px);
+
+  60% {
+    background-size: 20% 50%, 20% 100%, 20% 20%
   }
-  
-  .read-more-btn{
-    margin-top: 1.3rem;
-    width: 10rem;
+
+  80% {
+    background-size: 20% 50%, 20% 50%, 20% 100%
   }
-  .read-more-btn a {
-    color: white;
-    cursor: pointer;
-    font-family: "Roboto";
-    font-size: 0.4em;
-    transition: all 0.3s ease;
-    text-decoration: underline;
+
+  100% {
+    background-size: 20% 50%, 20% 50%, 20% 50%
   }
-  .read-more-btn:hover a{
-    color: aqua;
-  }
+}
+
+/* design for text inside sections */
+.section {
+  position: relative;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  padding: 0 2.5rem;
+  font-size: 2vw;
+  overflow: hidden;
+}
+
+.section h1 {
+  font-size: 3em;
+  /* Responsive heading */
+  margin-bottom: 1.2rem;
+  font-family: "Viga";
+  overflow: hidden;
+}
+
+.section h1 span {
+  display: inline-block;
+}
+
+.section p {
+  font-size: 0.6em;
+  max-width: 31.3rem;
+  /* Limit width for better readability */
+  padding: 0.5rem 0.2rem;
+  line-height: 1.5;
+  font-family: "Roboto";
+  backdrop-filter: blur(5px);
+}
+
+.read-more-btn {
+  margin-top: 1.3rem;
+  width: 10rem;
+}
+
+.read-more-btn a {
+  color: white;
+  cursor: pointer;
+  font-family: "Roboto";
+  font-size: 0.4em;
+  transition: all 0.3s ease;
+  text-decoration: underline;
+}
+
+.read-more-btn:hover a {
+  color: aqua;
+}
 
 /* Responsive for mobile devices below 440px  */
-@media(width<440px){
-    .section1,.section{
-        height: 55vh;
+@media(width<440px) {
+  .section1 {
+    height: calc(100vw * 0.56);
+  }
+
+  .section {
+    height: 55vh;
+    font-size: 2vh;
+
+    h1 {
+      font-size: 2.3em;
+      margin-bottom: 0.5rem;
     }
-    .section{
-      font-size: 2vh;
-      h1{
-        font-size: 2.3em;
-        margin-bottom: 0.5rem;
-      }
-      p{
-        font-size: 0.8;
-      }
-      .read-more-btn{
-        margin-top: 0.5rem;
-        a{
-          font-size: 0.6em;
-        }
+
+    p {
+      font-size: 0.8;
+    }
+
+    .read-more-btn {
+      margin-top: 0.5rem;
+
+      a {
+        font-size: 0.6em;
       }
     }
+  }
 
 }
