--- a/src/css/playground.css
+++ b/src/css/playground.css
@@ -17,6 +17,22 @@
     font-size: 1.5em;
     top: 5rem;
 }
+.load-model-btn{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    cursor: pointer;
+    font-size: 1.2em;
+    width: 70%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.15);
+}
 .model-3d{
     width: 100%;
     height: 100vh;
