--- a/src/css/header.css
+++ b/src/css/header.css
@@ -114,6 +114,7 @@
     position: absolute;
     top: 100%;
     left: 0;
+    width: max-content;
     background-color: rgba(0, 0, 0, 0.8);
     display: none;
     flex-direction: column;
