--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -10,24 +10,17 @@
 }
 
 .section2 {
-  height: 100vh;
-  background: url("/images/section2.png") no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-color: #434141;
 }
-
-.section3 {
-  height: 100vh;
-  background: url("/images/section3.png") no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.section4 {
-  height: 100vh;
-  background: url("/images/section4.png") no-repeat;
-  background-size: cover;
-  background-position: center;
+.sections video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .section1 video {
@@ -84,7 +77,8 @@
 }
 
 /* design for text inside sections */
-.section {
+.sections {
+  height: 100vh;
   position: relative;
   color: white;
   display: flex;
@@ -95,23 +89,24 @@
   font-size: 2vw;
   overflow: hidden;
 }
+.content{
+  margin-left: 50vw;
+}
 
-.section h1 {
-  font-size: 3em;
-  /* Responsive heading */
+.content h1 {
+  font-size: 2.5em;
   margin-bottom: 1.2rem;
   font-family: "Viga";
   overflow: hidden;
 }
 
-.section h1 span {
+.content h1 span {
   display: inline-block;
 }
 
-.section p {
+.content p {
   font-size: 0.6em;
   max-width: 31.3rem;
-  /* Limit width for better readability */
   padding: 0.5rem 0.2rem;
   line-height: 1.5;
   font-family: "Roboto";
@@ -142,25 +137,27 @@
     height: calc(100vw * 0.56);
   }
 
-  .section {
+  .sections {
     height: 55vh;
     font-size: 2vh;
+  }
+  .content{
+    margin-left: 0;
+  }
+  .content h1 {
+    font-size: 2.3em;
+    margin-bottom: 0.5rem;
+  }
 
-    h1 {
-      font-size: 2.3em;
-      margin-bottom: 0.5rem;
-    }
+  .content p {
+    font-size: 0.8;
+  }
 
-    p {
-      font-size: 0.8;
-    }
+  .read-more-btn {
+    margin-top: 0.5rem;
 
-    .read-more-btn {
-      margin-top: 0.5rem;
-
-      a {
-        font-size: 0.6em;
-      }
+    a {
+      font-size: 0.6em;
     }
   }
 
