--- a/src/css/planets.css
+++ b/src/css/planets.css
@@ -1,10 +1,8 @@
-.main-planets{
+.main-planets {
     height: 100%;
     width: 100vw;
     min-height: 100vh;
-    background: url('/images/SolarSystem-bg.jpg');
-    background-size: cover;
-    background-position: center;
+    background-color: #000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,86 +10,106 @@
     padding: 3.5rem 0;
     color: #fff;
 }
-.main-planets .header{
+
+.main-planets .header {
     font-size: 2em;
     width: 100%;
-    padding: 1.5rem;
+    padding: 1.3rem;
+    font-family: 'Viga', sans-serif;
 }
-.model-3d{
-    width: 80vw;
-    height: 80vh;
-    border: 2px solid #fff;
+
+.model-3d {
+    width: 100%;
+    height: 100vh;
     position: relative;
 }
-.model-3d .title{
-    font-size: 1.3em;
+
+.model-3d .title {
+    font-size: 1.5em;
     color: transparent;
     position: absolute;
-    top:1rem;
+    top: 1rem;
     left: 1rem;
     -webkit-text-stroke: 0.01px #fff;
+    font-family: 'Viga', sans-serif;
 }
+
 .arrow-icon{
     font-size: 2em;
     cursor: pointer;
     transition: all 0.3s ease;
 }
-.arrow-icon:hover{
-    font-size: 2.5em;
-    color: #9785e8;
+
+.carousel-container {
+    width: 100%;
+    overflow: hidden;
 }
-.arrow-icon.right{
-    position: absolute;
-    top: 50%;
-    right: 0.7rem;
-    transform: translateY(-50%);
-} 
-.arrow-icon.left{
-    position: absolute;
-    top: 50%;
-    left: 0.7rem;
-    transform: translateY(-50%);
-} 
-.info{
-    width: 92vw;
-    padding: 1.3rem;
-    margin-top: 2rem;
+
+.info-planets {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
-    backdrop-filter: blur(10px);
-    border-radius: 1.5rem;
-
+    width: 100%;
+    transition: transform 0.5s ease;
+    transform: translateX(440%);
 }
-.info li h2{
+.info-item {
+    flex: 0 0 96%;
+    width: 96%;
+}
+
+.info-item h2 {
     font-size: 1.5em;
     color: transparent;
     -webkit-text-stroke: 0.01px #fff;
     margin-bottom: 0.8rem;
-}
-.info li p{
-    font-size: 0.8em;
+    font-family: 'Viga', sans-serif;
+    position: relative;
 }
 
-@media (width< 450px){
-    .main-planets{
+.info li p {
+    font-size: 0.8em;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.arrow-icon {
+    cursor: pointer;
+    font-size: 2rem;
+    position: absolute;
+    top: 70%;
+    transform: translateY(-50%);
+}
+
+.arrow-icon.left {
+    left: 10px;
+}
+
+.arrow-icon.right {
+    right: 10px;
+}
+
+@media (width< 450px) {
+    .main-planets {
         font-size: 2.5vh;
     }
-    .model-3d{
+
+    .model-3d {
         width: 94vw;
         height: 55vh;
     }
+
     .info li h2,
-    .model-3d .title{
+    .model-3d .title {
         -webkit-text-stroke: 0.5px #fff;
     }
-    .arrow-icon.left{
+
+    .arrow-icon.left {
         left: 0.1rem;
     }
-    .arrow-icon.right{
+
+    .arrow-icon.right {
         right: 0.1rem;
     }
 }
-
