--- a/src/css/solar-planets.css
+++ b/src/css/solar-planets.css
@@ -2,9 +2,7 @@
     height: 100%;
     width: 100vw;
     min-height: 100vh;
-    background: url('/images/SolarSystem-bg.jpg');
-    background-size: cover;
-    background-position: center;
+    background-color: #000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,13 +11,14 @@
 }
 .main .header{
     width: 100%;
-    padding: 2rem;
+    padding: 1rem;
     color: white;
-    font-size: 2em;
+    font-size: 1.3em;
+    font-family: 'Viga', sans-serif;
 }
 .solar-system-container{
-    width: 80vw;
-    height: 70vh;
+    width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,25 +33,22 @@
     -webkit-text-stroke: 0.2px white;
     font-weight: 700;
     font-size: 1.5em;
+    font-family: 'Viga', sans-serif;
     z-index: 1;
 }
-.solar-system-canvas{
-    position: relative;
-    border: 2px solid white;
-}
 .main .info{
-    font-size: 1em;
+    font-size: 0.9em;
     width: 93vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 2rem 0;
     gap: 1rem;
     color: #ffffff;
     backdrop-filter: blur(10px);
     padding: 1rem 1.5rem;
     border-radius: 1rem;
+    font-family: 'Roboto', sans-serif;
 
     li{
         list-style-type: circle;
