--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-body,html{
+html, body {
     height: 100%;
     width: 100%;
 }
@@ -24,8 +24,12 @@ a{
     font-weight: bold;
     text-align: center;
     width: 100%;
-    height: 100%;
+    height: 100vh; /* Change to viewport height */
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #333;
+    position: fixed; /* Add this */
+    top: 0; /* Add this */
+    left: 0; /* Add this */
 }
