--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -8,10 +8,6 @@
   z-index: -1;
   font-size: 2vw;
 }
-
-.section2 {
-  background-color: #434141;
-}
 .sections video{
   width: 100%;
   height: 100%;
@@ -21,6 +17,17 @@
   top: 0;
   left: 0;
   z-index: -1;
+}
+.section2 h1{
+  font-size: 2.5em;
+  position: absolute;
+  top: 70%;
+  left: 2rem;
+  overflow: hidden;
+  transform: translateY(-50%);
+  span{
+    display: inline-block;
+  }
 }
 
 .section1 video {
