--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -6,7 +6,6 @@
   background: linear-gradient(#434141, rgb(154, 151, 151));
   color: white;
   z-index: -1;
-  font-size: 2vw;
 }
 .sections video{
   width: 100%;
@@ -19,9 +18,9 @@
   z-index: -1;
 }
 .headings{
-  font-size: 2em;
+  font-size: 1.6em;
   position: absolute;
-  top: 70%;
+  top: 75%;
   left: 2rem;
   overflow: hidden;
   transform: translateY(-50%);
@@ -102,12 +101,16 @@
 }
 
 .content h1 {
-  font-size: 1.3em;
-  margin-bottom: 1.2rem;
   font-family: "Inter";
   overflow: hidden;
 }
-
+.heading-first{
+  font-size: 2.4em;
+}
+.heading-second{
+  font-size: 1.5em;
+  margin-bottom: 1.2rem;
+}
 .content h1 span {
   display: inline-block;
 }
