--- a/src/css/member-card.css
+++ b/src/css/member-card.css
@@ -46,18 +46,23 @@ h3 {
   align-items: center;
   justify-content: start;
   flex-wrap: wrap;
-  gap: 0.7rem;
+  gap: 0.2rem 0.7rem;
   margin-top: 0.5rem;
+}
 
-  li {
-    padding: 0.3rem 0.8rem;
-    background-color: rgba(69, 181, 92, 0.774);
-    font-size: 0.44em;
-    border-radius: 0.8rem;
-    color: white;
-    font-weight: 500;
-    cursor: auto;
-  }
+.skills ul.wrapped {
+  min-height: 4rem;
+}
+
+.skills ul li {
+  padding: 0.3rem 0.8rem;
+  background-color: rgba(69, 181, 92, 0.774);
+  font-size: 0.44em;
+  border-radius: 0.8rem;
+  color: white;
+  font-weight: 500;
+  margin-bottom: 0;
+  cursor: auto;
 }
 
 .follow {
