--- a/src/css/planets.css
+++ b/src/css/planets.css
@@ -49,13 +49,13 @@
     display: flex;
     gap: 1.5rem;
     transition: transform 0.5s ease;
-    width: max-content;  /* Allow container to grow as needed */
-    transform: translateX(0.5%);
+    width: max-content; 
 }
 
 .info-item {
-    width: 93vw;
+    width: 98vw;
     flex-shrink: 0;
+    padding: 0 1.5rem;
 }
 
 .info-item h2 {
@@ -70,8 +70,10 @@
 .info-item p {
     font-size: 0.8em;
     font-family: 'Public Sans', sans-serif;
+    text-align: justify;
+    hyphens: auto;
+    word-break: break-word;
 }
-
 
 .arrow-icon {
     cursor: pointer;
