--- a/src/css/geomagneticStorms.css
+++ b/src/css/geomagneticStorms.css
@@ -5,7 +5,7 @@
 }
 
 .geomagnetic-storms {
-  max-width: 1100px;
+  max-width: 90vw;
   margin: 0 auto;
   padding: 20px;
   background-color: #f8f8f8;
@@ -81,9 +81,16 @@
   padding-left: 10px;
 }
 
+@media (width>1400px) {
+  .geomagnetic-storms {
+    font-size: 1.7vw;
+  }
+}
+
 @media (width<600px) {
   .geomagnetic-storms {
     padding: 15px;
     font-size: 2vh;
+    max-width: 98vw;
   }
 }
