--- a/src/css/Geomagnetic.css
+++ b/src/css/Geomagnetic.css
@@ -7,9 +7,20 @@
     justify-content: center;
     align-items: center;
     font-size: 2vw;
+    overflow: hidden;
 }
 
-.main-geomagnetic h1{
-    font-family: 'Inter', sans-serif;
-    font-size: 2em;
+.main-geomagnetic video{
+    object-fit: cover;
+    object-position: center;
+}
+
+@media (width<460px) {
+    .main-geomagnetic{
+        font-size: 2vh;
+    }
+    .main-geomagnetic video{
+        width: 100%;
+        height: 56vh;
+    }
 }
