--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -171,7 +171,7 @@
 }
 
 /* Responsive for mobile devices below 440px  */
-@media(width<440px) {
+@media(width<450px) {
   .section1 {
     height: calc(100vw * 0.56);
   }
@@ -183,13 +183,8 @@
   .content{
     margin-left: 0;
   }
-  .content h1 {
-    font-size: 2.3em;
-    margin-bottom: 0.5rem;
-  }
-
-  .content p {
-    font-size: 0.8;
+  .heading-first{
+    font-size: 2em;
   }
 
   .read-more-btn {
