--- a/src/css/stormForcast.css
+++ b/src/css/stormForcast.css
@@ -1,10 +1,40 @@
-.storm-forcast-container{
+.full-container{
+    padding: 5rem 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #000;
-    color: #fff;
+}
+
+.content-container {
+    max-width: 89vw;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 2vw;
+    font-family: "Public Sans", sans-serif;
+}
+
+.content-container h1 {
+    font-size: 1.6em;
+    color: #0066cc;
+    margin-bottom: 20px;
+    font-family: "Inter", sans-serif;
+    text-align: center;
+}
+
+.content-container p {
+    margin-bottom: 16px;
+    font-size: 0.8em;
+    line-height: 1.8;
+    text-align: justify;
+}
+
+.content-container a {
+    color: #0066cc;
+    text-decoration: none;
+}
+
+.content-container a:hover {
+    text-decoration: underline;
 }
