--- a/src/css/Geomagnetic.css
+++ b/src/css/Geomagnetic.css
@@ -13,6 +13,8 @@
 .main-geomagnetic video{
     object-fit: cover;
     object-position: center;
+    width: 100%;
+    height: 100%;
 }
 
 @media (width<460px) {
