--- a/src/css/Geomagnetic.css
+++ b/src/css/Geomagnetic.css
@@ -1,3 +1,15 @@
+.loading-screen{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .main-geomagnetic{
     height: 100vh;
     width: 100vw;
