--- a/src/css/stormForcast.css
+++ b/src/css/stormForcast.css
@@ -9,11 +9,11 @@
 .search-container{
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: rgba(255, 255, 255, 0.785);
     padding: 2rem;
     border-radius: 1rem;
-    height: 75vh;
+    height: 76vh;
+    width: 100%;
 }
 
 .content-container {
