--- a/src/css/stormForcast.css
+++ b/src/css/stormForcast.css
@@ -13,7 +13,7 @@
     padding: 2rem;
     border-radius: 1rem;
     height: 76vh;
-    width: 100%;
+    width: 85vw;
 }
 
 .content-container {
@@ -62,20 +62,4 @@
 .search-container {
     padding: 20px;
     background-color: #f0f0f0;
-}
-
-@media (min-height: 768px) {
-    .storm-forecast-page {
-        flex-direction: row;
-    }
-
-    .content-container {
-        flex: 1;
-        overflow-y: auto;
-    }
-
-    .search-container {
-        width: 300px;
-        overflow-y: auto;
-    }
 }
