--- a/src/css/stormForcast.css
+++ b/src/css/stormForcast.css
@@ -63,3 +63,13 @@
     padding: 20px;
     background-color: #f0f0f0;
 }
+
+@media (width< 450px){
+    .content-container{
+        font-size: 2vh;
+    }
+    .search-container{
+        width: 79vw;
+        height: 60vh;
+    }
+}
